--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Mslider</h1>
+        <h1 class="header">iSlider</h1>
         <p class="header">A efficency &amp; simple slider for webapp</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/MSlider/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/MSlider/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/lcxfs1991/MSlider">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/iSlider/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/lcxfs1991/iSlider/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/lcxfs1991/iSlider">View On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/lcxfs1991">lcxfs1991</a></p>
@@ -31,60 +31,27 @@
       </header>
       <section>
         <h1>
-<a name="mslider" class="anchor" href="#mslider"><span class="octicon octicon-link"></span></a>MSlider</h1>
+<a name="islidersmooth-slider-for-webapps" class="anchor" href="#islidersmooth-slider-for-webapps"><span class="octicon octicon-link"></span></a>iSlider，Smooth slider for webapps</h1>
 
-<h1>
-<a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h1>
-
-<ul>
-<li>Mobile First</li>
-<li>Best Perfomance (Low Memory Usage and No Lagging By Keeping Only 3 li Elements)</li>
-<li>Multi-contents (Picture | Dom Element)</li>
-<li>Fancy Effect (Damping effect, Infinite Looping, Vertical/Horizontal Sliding)</li>
-</ul>
-
-<h1>
-<a name="getting-started-picture-basic-version" class="anchor" href="#getting-started-picture-basic-version"><span class="octicon octicon-link"></span></a>Getting Started (Picture Basic Version)</h1>
-
-<h3>
-<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h3>
+<p>iSlider is a high performance，dependency free, mobile-platform javascript slider.
+It can handle any elements that need to be slide, like picture list or different dom elements. 
+It features:</p>
 
 <ul>
-<li><a href="http://be-fe.github.io/MSlider/demo/basic-picture/">Picture Basic Vesrion</a></li>
+<li>Animation can be customized with user defined functions (rotate, 3d, default).</li>
+<li>You can easily hook to a plethora of custom events (onslidestart, onslide, onslideend, onslidechange)</li>
+<li>Damping effect, Infinite Looping, Autometic sliding and Vertical/Horizontal Sliding can be configured.</li>
 </ul>
 
-<h3>
-<a name="procedure" class="anchor" href="#procedure"><span class="octicon octicon-link"></span></a>Procedure</h3>
+<h2>
+<a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h2>
 
-<p>The following introduce how to set up a basic version of MSlider</p>
+<p>The best way to learn the iScroll is by looking at the demos. In the archive you'll find a demo folderMost of the script features are outlined there.
+<em>iSlider</em> is a class that needs to be initiated for each dom area. </p>
 
-<p><b>Step 1. </b>Set meta and css and other resources</p>
+<p>Before you start, you need to prepare some data for iSlider:</p>
 
-<p>Firstly, at the top of file, please put meta and link tag like the following.</p>
-
-<pre><code>&lt;meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"/&gt;
-&lt;link type="text/css" rel="stylesheet" media="all" href="css/common.css"&gt;
-</code></pre>
-
-<p>Secondly, please prepare images/pictures and put them under a specific folder</p>
-
-<p><b>Step 2.</b> HTML markup</p>
-
-<pre><code>&lt;div id="MSlider-canvas"&gt;&lt;/div&gt;
-</code></pre>
-
-<p><b>Step 3.</b> Javascript</p>
-
-<p>Add mslider.js and app.js. Strongly recommend you to put your script at the bottom of the body tag.</p>
-
-<div class="highlight highlight-javascript"><pre><span class="o">&lt;</span><span class="nx">script</span> <span class="nx">src</span><span class="o">=</span><span class="s2">"../src/mslider.js"</span><span class="o">&gt;&lt;</span><span class="err">/script&gt;</span>
-<span class="o">&lt;</span><span class="nx">script</span> <span class="nx">src</span><span class="o">=</span><span class="s2">"app.js"</span><span class="o">&gt;&lt;</span><span class="err">/script&gt;</span>
-</pre></div>
-
-<p>Actually the code in app.js is the bootstrap code for the project. You can directly put the code at HTML file. Example codes are as follow. Only data and dom option parameters are necessary. Other parameters are optional. You can refer to the option table at the bottom of README</p>
-
-<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">list</span> <span class="o">=</span> <span class="p">[</span>
-<span class="p">{</span>
+<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">data</span> <span class="o">=</span> <span class="p">[{</span>
     <span class="nx">height</span><span class="o">:</span> <span class="mi">475</span><span class="p">,</span>
     <span class="nx">width</span><span class="o">:</span> <span class="mi">400</span><span class="p">,</span>
     <span class="nx">content</span><span class="o">:</span> <span class="s2">"imgs/1.jpg"</span><span class="p">,</span>
@@ -96,97 +63,32 @@
     <span class="nx">height</span><span class="o">:</span> <span class="mi">400</span><span class="p">,</span>
     <span class="nx">width</span><span class="o">:</span> <span class="mi">512</span><span class="p">,</span>
     <span class="nx">content</span><span class="o">:</span> <span class="s2">"imgs/3.jpg"</span><span class="p">,</span>
-<span class="p">},{</span>
-    <span class="nx">height</span><span class="o">:</span> <span class="mi">400</span><span class="p">,</span>
-    <span class="nx">width</span><span class="o">:</span> <span class="mi">458</span><span class="p">,</span>
-    <span class="nx">content</span><span class="o">:</span><span class="s2">"imgs/5.jpg"</span>
-<span class="p">},{</span>
-    <span class="nx">height</span><span class="o">:</span> <span class="mi">400</span><span class="p">,</span>
-    <span class="nx">width</span><span class="o">:</span> <span class="mi">498</span><span class="p">,</span>
-    <span class="nx">content</span><span class="o">:</span><span class="s2">"imgs/6.jpg"</span>
-<span class="p">},{</span>
-    <span class="nx">height</span><span class="o">:</span> <span class="mi">377</span><span class="p">,</span>
-    <span class="nx">width</span><span class="o">:</span> <span class="mi">600</span><span class="p">,</span>
-    <span class="nx">content</span><span class="o">:</span><span class="s2">"imgs/7.jpg"</span>
-<span class="p">},{</span>
-    <span class="nx">height</span><span class="o">:</span> <span class="mi">396</span><span class="p">,</span>
-    <span class="nx">width</span><span class="o">:</span> <span class="mi">600</span><span class="p">,</span>
-    <span class="nx">content</span><span class="o">:</span><span class="s2">"imgs/8.jpg"</span>
-<span class="p">},{</span>
-    <span class="nx">height</span><span class="o">:</span> <span class="mi">374</span><span class="p">,</span>
-    <span class="nx">width</span><span class="o">:</span> <span class="mi">600</span><span class="p">,</span>
-    <span class="nx">content</span><span class="o">:</span><span class="s2">"imgs/9.jpg"</span>
-<span class="p">}</span>
-<span class="p">];</span>
-
-<span class="nx">mslider</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">MSlider</span><span class="p">({</span>
-    <span class="nx">data</span><span class="o">:</span> <span class="nx">list</span><span class="p">,</span>
-    <span class="nx">dom</span><span class="o">:</span> <span class="nb">document</span><span class="p">.</span><span class="nx">getElementById</span><span class="p">(</span><span class="s2">"MSlider-canvas"</span><span class="p">),</span>
-    <span class="nx">isVertical</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isLooping</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isDebug</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isAutoplay</span><span class="o">:</span> <span class="kc">true</span>
-<span class="p">});</span>
-
+<span class="p">}];</span>
 </pre></div>
 
-<h1>
-<a name="picture-comprehensive-version" class="anchor" href="#picture-comprehensive-version"><span class="octicon octicon-link"></span></a>Picture Comprehensive Version</h1>
+<p>HTML structure you only need to prepare is :</p>
 
-<h3>
-<a name="description" class="anchor" href="#description"><span class="octicon octicon-link"></span></a>Description</h3>
-
-<p>This version shows how fancy we can be. Please enjoy it.</p>
-
-<h3>
-<a name="demo-1" class="anchor" href="#demo-1"><span class="octicon octicon-link"></span></a>Demo</h3>
-
-<ul>
-<li><a href="http://be-fe.github.io/MSlider/demo/comprehensive-picture/">Picture Comprehensive Version</a></li>
-</ul>
-
-<h1>
-<a name="dom-basic-version" class="anchor" href="#dom-basic-version"><span class="octicon octicon-link"></span></a>DOM Basic Version</h1>
-
-<h3>
-<a name="demo-2" class="anchor" href="#demo-2"><span class="octicon octicon-link"></span></a>Demo</h3>
-
-<ul>
-<li><a href="http://be-fe.github.io/MSlider/demo/basic-dom/">Dom Basic Version</a></li>
-</ul>
-
-<h3>
-<a name="procedure-1" class="anchor" href="#procedure-1"><span class="octicon octicon-link"></span></a>Procedure</h3>
-
-<p>Step 1 is similar to basic version above</p>
-
-<p><b>Step 2.</b> HTML markup</p>
-
-<p>For DOM version, we may need to add some menus at the top, so there are some differences</p>
-
-<pre><code>&lt;div id="MSlider-outer"&gt;
-    &lt;div id="MSlider-canvas"&gt;
-        &lt;div id="MSlider-nav"&gt;
-            &lt;a&gt;Home&lt;/a&gt;
-        &lt;/div&gt;
-        &lt;div id="MSlider-show"&gt; 
-
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
+<pre><code>&lt;div id="iSlider-wrapper"&gt;&lt;/div&gt;
 </code></pre>
 
-<p><b>Step 3.</b> Javascript</p>
+<p>To make it runnable, all you need to do is to initiate:</p>
 
-<p>Add mslider.js and app.js. Strongly recommend you to put your script at the bottom of the body tag.</p>
+<pre><code>&lt;script type="text/javascript"&gt;
+    var mySlider = new ISlider({
+        dom : document.getElementById('iSlider-wrapper'),
+        data : data
+    });
+&lt;/script&gt;
+</code></pre>
 
-<div class="highlight highlight-javascript"><pre><span class="o">&lt;</span><span class="nx">script</span> <span class="nx">src</span><span class="o">=</span><span class="s2">"../src/mslider.js"</span><span class="o">&gt;&lt;</span><span class="err">/script&gt;</span>
-<span class="o">&lt;</span><span class="nx">script</span> <span class="nx">src</span><span class="o">=</span><span class="s2">"app.js"</span><span class="o">&gt;&lt;</span><span class="err">/script&gt;</span>
-</pre></div>
+<p>That's it. </p>
 
-<p>The code in app.js is a bit different from picture basic version.</p>
+<h2>
+<a name="configure-the-islider" class="anchor" href="#configure-the-islider"><span class="octicon octicon-link"></span></a>Configure the iSlider</h2>
 
-<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">list</span> <span class="o">=</span> <span class="p">[{</span>
+<p>Besides the basic ways you can do with iSlider, you can customized the features we provide. For example, if you prefers to put dom elements on the list, you can change the data array like this:</p>
+
+<div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">data</span> <span class="o">=</span> <span class="p">[{</span>
     <span class="s1">'height'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
     <span class="s1">'width'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
     <span class="s1">'content'</span> <span class="o">:</span> <span class="s1">'&lt;div&gt;&lt;h1&gt;Home&lt;/h1&gt;&lt;h2&gt;This is home page&lt;/h2&gt;&lt;p&gt;home is pretty awsome&lt;/p&gt;&lt;div&gt;'</span>
@@ -198,49 +100,30 @@
     <span class="s1">'height'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
     <span class="s1">'width'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
     <span class="s1">'content'</span> <span class="o">:</span> <span class="s1">'&lt;div&gt;&lt;h1&gt;Page2&lt;/h1&gt;&lt;h2&gt;This is Page2&lt;/h2&gt;&lt;p&gt;Page2 is pretty awsome&lt;/p&gt;&lt;div&gt;'</span>
-<span class="p">},{</span>
-    <span class="s1">'height'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
-    <span class="s1">'width'</span> <span class="o">:</span> <span class="s1">'100%'</span><span class="p">,</span>
-    <span class="s1">'content'</span> <span class="o">:</span> <span class="s1">'&lt;div&gt;&lt;h1&gt;Page3&lt;/h1&gt;&lt;h2&gt;This is page3&lt;/h2&gt;&lt;p&gt;page3 is pretty awsome&lt;/p&gt;&lt;div&gt;'</span>
 <span class="p">}];</span>
-
-<span class="kd">var</span> <span class="nx">info</span> <span class="o">=</span> <span class="p">[</span><span class="s1">'Home'</span><span class="p">,</span> <span class="s1">'Page 1'</span><span class="p">,</span> <span class="s1">'Page 2'</span><span class="p">,</span> <span class="s1">'Page3'</span><span class="p">];</span>
-
-<span class="kd">var</span> <span class="nx">mslider</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">MSlider</span><span class="p">({</span>
-    <span class="nx">data</span><span class="o">:</span> <span class="nx">list</span><span class="p">,</span>
-    <span class="nx">type</span><span class="o">:</span> <span class="s1">'dom'</span><span class="p">,</span>
-    <span class="nx">dom</span><span class="o">:</span> <span class="nb">document</span><span class="p">.</span><span class="nx">getElementById</span><span class="p">(</span><span class="s2">"MSlider-show"</span><span class="p">),</span>
-    <span class="nx">duration</span><span class="o">:</span> <span class="mi">2000</span><span class="p">,</span>
-    <span class="nx">isVertical</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isLooping</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isDebug</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">isAutoplay</span><span class="o">:</span> <span class="kc">true</span><span class="p">,</span>
-    <span class="nx">onslidechange</span><span class="o">:</span> <span class="kd">function</span><span class="p">(</span><span class="nx">idx</span><span class="p">){</span>
-        <span class="nb">document</span><span class="p">.</span><span class="nx">getElementById</span><span class="p">(</span><span class="s1">'MSlider-nav'</span><span class="p">).</span><span class="nx">children</span><span class="p">[</span><span class="mi">0</span><span class="p">].</span><span class="nx">innerText</span> <span class="o">=</span> <span class="nx">info</span><span class="p">[</span><span class="nx">idx</span><span class="p">];</span>
-    <span class="p">}</span>
-<span class="p">});</span>
 </pre></div>
 
-<h1>
-<a name="dom-comprehensive-version" class="anchor" href="#dom-comprehensive-version"><span class="octicon octicon-link"></span></a>Dom Comprehensive Version</h1>
+<p>If you hope to implement the effects mentioned in introduction part, you can:</p>
 
-<h3>
-<a name="description-1" class="anchor" href="#description-1"><span class="octicon octicon-link"></span></a>Description</h3>
+<pre><code>&lt;script type="text/javascript"&gt;
+    var mySlider = new ISlider({
+        dom : document.getElementById('iSlider-wrapper'),
+        data : data,
+        duration: 2000,
+        isVertical: true,
+        isLooping: true,
+        isDebug: true,
+        isAutoplay: true
+    });
+&lt;/script&gt;
+</code></pre>
 
-<p>This version shows how fancy we can be. Please enjoy it.</p>
+<h2>
+<a name="understand-the-islider" class="anchor" href="#understand-the-islider"><span class="octicon octicon-link"></span></a>Understand The iSlider</h2>
 
-<h3>
-<a name="demo-3" class="anchor" href="#demo-3"><span class="octicon octicon-link"></span></a>Demo</h3>
+<p>Here provides a clear description of what options you are able to manipulate:</p>
 
-<ul>
-<li><a href="http://be-fe.github.io/MSlider/demo/comprehensive-dom/">Dom Comprehensive Version</a></li>
-</ul>
-
-<h1>
-<a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Options</h1>
-
-<p>
-</p><table>
+<table>
 <thead>
     <tr>
         <td>Option</td>
@@ -276,16 +159,6 @@
         <td>duration</td>
         <td>Integer (1000 == 1s)</td>
         <td>Time gap when an image slides</td>
-    </tr>
-    <tr>
-        <td>ulClass</td>
-        <td>String</td>
-        <td>CSS class name of ul</td>
-    </tr>
-    <tr>
-        <td>liClass</td>
-        <td>String</td>
-        <td>CSS class name of li</td>
     </tr>
     <tr>
         <td>onslide</td>
@@ -330,11 +203,12 @@
 </tbody>
 </table>
 
+<h2>
+<a name="license-mit" class="anchor" href="#license-mit"><span class="octicon octicon-link"></span></a>License (MIT)</h2>
 
-<h1>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
+<p>Copyright (c) 2014 BE-FE</p>
 
-<p><a href="https://github.com/BE-FE/MSlider/blob/master/LICENSE">MIT</a></p>
+<p><a href="https://github.com/BE-FE/iSlider/blob/master/LICENSE">MIT</a></p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
